--- a/src/main/resources/templates/chat/room.html
+++ b/src/main/resources/templates/chat/room.html
@@ -1,81 +1,129 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <html lang="ko" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<script th:inline="javascript">
+    var stompClient = null;
+    var roomId = [[${roomId}]];
+    var chatList = [[${chatList}]];
+    var sender = [[${userName}]];
+    var senderEmail = [[${userEmail}]];
 
-<th:block th:fragment="content">
+    function setConnected(connected) {
+        $("#connect").prop("disabled", connected);
+        $("#disconnect").prop("disabled", !connected);
+        if (connected) {
+            $("#conversation").show();
+        } else {
+            $("#conversation").hide();
+        }
+        $("#chatting").html("");
+    }
 
-    <div class="container">
-        <div class="col-6">
-            <h1>[[${room.name}]]</h1>
-        </div>
-        <div>
-            <div id="msgArea" class="col"></div>
-            <div class="col-6">
-                <div class="input-group mb-3">
-                    <input type="text" id="msg" class="form-control">
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="button" id="button-send">전송</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-6"></div>
-    </div>
+    function connect() {
+        var socket = new SockJS("/ws-stomp");
+        stompClient = Stomp.over(socket);
+        stompClient.connect({}, function (frame) {
+            setConnected(true);
+            console.log('Connected: ' + frame);
+            loadChat(chatList)  //저장된 채팅 불러오기
 
-    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-
-    <script th:inline="javascript">
-        $(document).ready(function () {
-
-            var roomName = [[${room.name}]] || 'Default Room Name';
-            var roomId = [[${room.roomId}]] || 'Default Room ID';
-            var username = [[${#authentication.principal.username}]] || 'Guest';
-
-            console.log(roomName + ", " + roomId + ", " + username);
-
-            var sockJs = new SockJS("/stomp/chat");
-            //1. SockJS를 내부에 들고있는 stomp를 내어줌
-            var stomp = Stomp.over(sockJs);
-
-            //2. connection이 맺어지면 실행
-            stomp.connect({}, function () {
-                console.log("STOMP Connection")
-
-                //4. subscribe(path, callback)으로 메세지를 받을 수 있음
-                stomp.subscribe("/sub/chat/room/" + roomId, function (chat) {
-                    var content = JSON.parse(chat.body);
-                    var message = content.message; // 메시지 변수 추가
-                    var writer = content.writer;
-                    var str = '';
-
-                    if (writer === username) {
-                        str = "<div class='col-6'><div class='alert alert-secondary'><b>" + writer + " : " + message + "</b></div></div>";
-                    } else {
-                        str = "<div class='col-6'><div class='alert alert-warning'><b>" + writer + " : " + message + "</b></div></div>";
-                    }
-
-                    $("#msgArea").append(str); // 중복 제거
-                });
-
-                //3. send(path, header, message)로 메세지를 보낼 수 있음
-                stomp.send('/pub/chat/enter', {}, JSON.stringify({roomId: roomId, writer: username}))
-            });
-
-            $("#button-send").on("click", function (e) {
-                var msg = document.getElementById("msg");
-
-                console.log(username + ":" + msg.value);
-                stomp.send('/pub/chat/message', {}, JSON.stringify({
-                    roomId: roomId,
-                    message: msg.value,
-                    writer: username
-                }));
-                msg.value = '';
+            //구독
+            stompClient.subscribe('/room/' + roomId, function (chatMessage) {
+                showChat(JSON.parse(chatMessage.body));
             });
         });
-    </script>
-</th:block>
+    }
 
+    function disconnect() {
+        if (stompClient !== null) {
+            stompClient.disconnect();
+        }
+        setConnected(false);
+        console.log("Disconnected");
+    }
+
+    //html 에서 입력값, roomId 를 받아서 Controller 로 전달
+    function sendChat() {
+        if ($("#message").val() != "") {
+            stompClient.send("/send/" + roomId, {},
+                JSON.stringify({
+                    'sender': sender,
+                    'senderEmail': senderEmail,
+                    'message': $("#message").val()
+                }));
+            $("#message").val('');
+        }
+    }
+
+    //저장된 채팅 불러오기
+    function loadChat(chatList) {
+        if (chatList != null) {
+            for (chat in chatList) {
+                if (chatList[chat].senderEmail == senderEmail) {
+                    $("#chatting").append(
+                        "<div class = 'chatting_own'><tr><td>" + chatList[chat].message + "</td></tr></div>"
+                    );
+                } else {
+                    $("#chatting").append(
+                        "<div class = 'chatting'><tr><td>" + "[" + chatList[chat].sender + "] " + chatList[chat].message + "</td></tr></div>"
+                    );
+                }
+            }
+        }
+        $('.col-md-12').scrollTop($('.col-md-12')[0].scrollHeight); // 채팅이 많아질시에 자동 스크롤
+    }
+
+    //보낸 채팅 보기
+    function showChat(chatMessage) {
+        if (chatMessage.senderEmail == senderEmail) {
+            $("#chatting").append(
+                "<div class = 'chatting_own'><tr><td>" + chatMessage.message + "</td></tr></div>"
+            );
+        } else {
+            $("#chatting").append(
+                "<div class = 'chatting'><tr><td>" + "[" + chatMessage.sender + "] " + chatMessage.message + "</td></tr></div>"
+            );
+        }
+        $('.col-md-12').scrollTop($('.col-md-12')[0].scrollHeight);
+    }
+
+    $(function () {
+        $("form").on('submit', function (e) {
+            e.preventDefault();
+        });
+        $("#connect").click(function () {
+            connect();
+        });
+        $("#disconnect").click(function () {
+            disconnect();
+        });
+        $("#send").click(function () {
+            sendChat();
+        });
+    });
+</script>
+<script>
+    //창 키면 바로 연결
+    window.onload = function () {
+        connect();
+    }
+
+    window.BeforeUnloadEvent = function () {
+        disconnect();
+    }
+</script>
+<script>
+    var modal = document.querySelector(".modal");
+    var trigger = document.querySelector(".trigger");
+    var closeButton = document.querySelector(".close-button");
+
+    //console.log(modal);
+
+    function toggleModal() {
+        modal.classList.toggle("show-modal");
+    }
+
+    trigger.addEventListener("click", toggleModal);
+    closeButton.addEventListener("click", toggleModal);
+</script>
 </html>
